minor layout issues

--- a/web/skins/eduroam2016/resources/css/cat-user.css
+++ b/web/skins/eduroam2016/resources/css/cat-user.css
@@ -653,6 +653,10 @@ img.close_button {
    cursor: pointer;
 }
 
+#main_menu_content div.padding {
+    padding-left: 20px;
+    padding-right: 20px;
+}
 #main_menu_content h1 {
     padding: 40px;
     height: 30px;
